<resources>
    <string name="app_name">Login</string>
    <string name="text1">Login</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?</string>
    <string name="registrate">Registrate.</string>
    <string name="inicia_secion">Inicia Secion.</string>
    <string name="ya_tienes_una_cuanta">Ya tienes una cuanta?</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="e_mail">E-mail</string>
    <string name="nombre">Nombre</string>
    <string name="registro">Registro</string>
    <string name="horas">Horas:</string>
</resources>
