<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.example.admin.login.Registro">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/registro"
        android:textSize="30sp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nombre"
        android:layout_below="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:layout_marginTop="25dp">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usuario1"
        android:layout_below="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/us1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password1"
        android:layout_below="@+id/usuario1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/pas1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordR"
        android:layout_below="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:errorEnabled="true"
        app:passwordToggleEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/conf_pas1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_password"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/entrarx"
        android:layout_width="300sp"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/registrar"
        style="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:backgroundTint="@android:color/white" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/entrarx"
        android:layout_below="@+id/entrarx"
        android:layout_marginStart="29dp"
        android:layout_marginTop="10dp"
        android:text="@string/ya_tienes_una_cuanta" />

    <TextView
        android:id="@+id/inicio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/entrarx"
        android:layout_marginEnd="35dp"
        android:onClick="dato"
        android:padding="10dp"
        android:text="@string/inicia_secion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold" />


</RelativeLayout>
