<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:padding="10dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/text1"
        android:textAllCaps="false"
        android:textColor="@color/colorBlanco"
        android:textSize="36sp"
        android:textStyle="italic" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/usuario"
        android:layout_below="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorBlanco"
        android:layout_marginTop="60dp">
       <EditText
           android:id="@+id/us"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/usuario"
           android:textColor="@color/colorBlanco"
           android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password"
        android:layout_below="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorBlanco"
        android:layout_marginTop="40dp">
        <in.anshul.libray.PasswordEditText
            android:id="@+id/pas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/colorBlanco"
            app:show_drawable="@drawable/show_password"
            app:password_visible="false"
            app:hide_drawable="@drawable/hide_password"
            />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/entrar"
        android:layout_width="300sp"
        android:layout_height="50dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:onClick="llista"
        style="?android:textAppearanceSmall"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:backgroundTint="@android:color/white"
        android:text="@string/iniciar_sesi_n" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entrar"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/registro"
        android:text="@string/no_tienes_una_cuenta" />

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/entrar"
        android:layout_marginEnd="33dp"
        android:padding="10dp"
        android:text="@string/registrate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textStyle="bold" />


</RelativeLayout>
